--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
           <p class="text-center my-5 fw-bold">I debug life the same way I debug code with patience, caffeine, and a bit of panic.</p>
         </div>
 
+        <div class="py-3">
+            <h4>My Github Trophies</h4>
+            <img src="https://github-profile-trophy-fork-two.vercel.app/?username=Unknownplanet40&theme=discord&no-bg=true&no-frame=true&column=5&margin-w=15&margin-h=15" alt="Trophies" class="img-fluid rounded" />
+        </div>
+
         <div>
             <img src="https://user-images.githubusercontent.com/73097560/115834477-dbab4500-a447-11eb-908a-139a6edaec5c.gif" alt="Coding" class="img-fluid rounded" />
         </div>
