Adjust alignment of profile stats and image sections in index.html

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
         </div>
         <div class="container-fluid py-3">
           <div class="row g-3">
-            <div class="col-md-8 p-3 d-flex flex-column align-items-center">
+            <div class="col-md-8 p-3 d-flex flex-column align-items-start">
                 <p><img src="profile/stats.svg" alt="unknownplanet40"></p>
                 <p><img src="profile/top-langs.svg" alt="unknownplanet40"></p>
                 <p><img src="profile/wakatime.svg" alt="unknownplanet40"></p>
                 <p><img align="center" src="https://github-readme-streak-stats.herokuapp.com/?user=unknownplanet40&amp;theme=dark&amp;hide_border=true" alt="unknownplanet40" /></p>
 
             </div>
-            <div class="col-md-4 order-md-1 order-first d-flex justify-content-center align-items-center">
+            <div class="col-md-4 order-md-1 order-first d-flex justify-content-center align-items-start">
               <img alt="Coding" width="250" src="Profile1.webp" class="img-fluid rounded" />
             </div>
           </div>
