Add GitHub profile summary card and adjust trophy section layout in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="https://github.com/Unknownplanet40/UP40-Collection/blob/917800f01315393a641f35872de81873bcfd04de/Icons/Icon-x96.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/Unknownplanet40/UP40-Collection/blob/917800f01315393a641f35872de81873bcfd04de/Icons/Icon-x96.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" />
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <title>Github Profile</title>
@@ -61,12 +61,20 @@
         </div>
 
         <div class="py-3">
-            <h4>My Github Trophies</h4>
-            <img src="https://github-profile-trophy-fork-two.vercel.app/?username=Unknownplanet40&theme=discord&no-bg=true&no-frame=true&column=5&margin-w=15&margin-h=15" alt="Trophies" class="img-fluid rounded" />
+          <h4>My Github Trophies</h4>
+          <img
+            src="https://github-profile-trophy-fork-two.vercel.app/?username=Unknownplanet40&theme=discord&no-bg=true&no-frame=true&column=5&margin-w=15&margin-h=15"
+            alt="Trophies"
+            class="img-fluid rounded"
+          />
         </div>
 
         <div>
-            <img src="https://user-images.githubusercontent.com/73097560/115834477-dbab4500-a447-11eb-908a-139a6edaec5c.gif" alt="Coding" class="img-fluid rounded" />
+          <img src="https://user-images.githubusercontent.com/73097560/115834477-dbab4500-a447-11eb-908a-139a6edaec5c.gif" alt="Coding" class="img-fluid rounded" />
+        </div>
+
+        <div class="container d-flex justify-content-center align-items-center py-3">
+          <img src="http://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=Unknownplanet40&theme=github_dark" alt="Profile Summary" class="img-fluid rounded" />
         </div>
 
         <div class="container-fluid py-3">
@@ -81,14 +89,14 @@
             </div>
           </div>
         </div>
+
         <div class="container-fluid py-3">
           <div class="row g-3">
             <div class="col-md-8 p-3 d-flex flex-column align-items-start">
-                <p><img src="profile/stats.svg" alt="unknownplanet40"></p>
-                <p><img src="profile/top-langs.svg" alt="unknownplanet40"></p>
-                <p><img src="profile/wakatime.svg" alt="unknownplanet40"></p>
-                <p><img align="center" src="https://github-readme-streak-stats.herokuapp.com/?user=unknownplanet40&amp;theme=dark&amp;hide_border=true" alt="unknownplanet40" /></p>
-
+              <p><img src="profile/stats.svg" alt="unknownplanet40" /></p>
+              <p><img src="profile/top-langs.svg" alt="unknownplanet40" /></p>
+              <p><img src="profile/wakatime.svg" alt="unknownplanet40" /></p>
+              <p><img align="center" src="https://github-readme-streak-stats.herokuapp.com/?user=unknownplanet40&amp;theme=dark&amp;hide_border=true" alt="unknownplanet40" /></p>
             </div>
             <div class="col-md-4 order-md-1 order-first d-flex justify-content-center align-items-start">
               <img alt="Coding" width="250" src="Profile1.webp" class="img-fluid rounded" />
@@ -96,7 +104,7 @@
           </div>
         </div>
         <div>
-            <img src="https://user-images.githubusercontent.com/73097560/115834477-dbab4500-a447-11eb-908a-139a6edaec5c.gif" alt="Coding" class="img-fluid rounded" />
+          <img src="https://user-images.githubusercontent.com/73097560/115834477-dbab4500-a447-11eb-908a-139a6edaec5c.gif" alt="Coding" class="img-fluid rounded" />
         </div>
       </div>
     </div>
